--- a/app/src/main/res/layout/avatars_multiple.xml
+++ b/app/src/main/res/layout/avatars_multiple.xml
@@ -62,7 +62,7 @@
         android:background="@drawable/background_button_show_more"
         android:contentDescription="@string/avatar_load_button"
         android:src="@drawable/ic_add_24dp"
-        app:layout_constraintBottom_toTopOf="@id/LoginET"
+        app:layout_constraintBottom_toTopOf="@id/LoginETL"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
