--- a/app/src/main/res/layout/image_load.xml
+++ b/app/src/main/res/layout/image_load.xml
@@ -1,6 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/photo_container_nested"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:visibility="gone"
+    tools:visibility="visible">
 
+    <ImageView
+        android:id="@+id/photo"
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/max_size_attachment"
+        android:layout_gravity="center_horizontal"
+        android:contentDescription="@string/desc_attachment_image"
+        android:scaleType="centerCrop"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:src="@drawable/test_avatar2" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/removePhoto"
+        android:layout_width="100dp"
+        android:layout_height="@dimen/icon_min_size"
+        android:text="@string/text_button_remove"
+        android:textAllCaps="false"
+        app:cornerRadius="100dp"
+        app:layout_constraintBottom_toBottomOf="@id/photo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
