--- a/app/src/main/res/layout/job_new_fragment.xml
+++ b/app/src/main/res/layout/job_new_fragment.xml
@@ -27,7 +27,7 @@
         android:padding="@dimen/common_spacing">
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/NameET"
+            android:id="@+id/NameETL"
             style="?attr/textInputFilledStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -49,7 +49,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/element_spacing"
             android:hint="@string/hint_position_edit_text"
-            app:layout_constraintTop_toBottomOf="@id/NameET">
+            app:layout_constraintTop_toBottomOf="@id/NameETL">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
@@ -65,7 +65,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="@dimen/element_spacing"
-            android:hint="@string/hint_link_edit_text"
+            android:hint="@string/link"
             app:layout_constraintTop_toBottomOf="@id/PositionET">
 
             <com.google.android.material.textfield.TextInputEditText
