--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,8 +9,8 @@
         <item name="iconTint">@color/primary</item>
         <item name="android:textColor">@color/primary</item>
         <item name="android:minWidth">0dp</item>
-        <item name="android:minHeight">@dimen/icon_min_height</item>
-        <item name="android:insetTop">10dp
+        <item name="android:minHeight">@dimen/icon_min_size</item>
+        <item name="android:insetTop">0dp
         </item>
         <item name="android:insetBottom">0dp</item>
     </style>
